--- a/datasets/fsf-flood-risk.yaml
+++ b/datasets/fsf-flood-risk.yaml
@@ -32,9 +32,13 @@ Resources:
     ARN: arn:aws:s3:::first-street-climate-risk-statistics-for-noncommercial-use
     Region: us-west-2
     Type: S3 Bucket
+    URL: https://s3.console.aws.amazon.com/s3/buckets/first-street-climate-risk-statistics-for-noncommercial-use?region=us-west-2&tab=objects
 
 DataAtWork:
   Tools & Applications:
+    - Title: First Street Foundation Aggregated Datasets S3 Bucket
+      URL: https://s3.console.aws.amazon.com/s3/buckets/first-street-climate-risk-statistics-for-noncommercial-use?region=us-west-2&tab=objects
+      AuthorName: First Street Foundation
     - Title: First Street Foundation Flood Lab
       URL: https://firststreet.org/flood-lab/
       AuthorName: First Street Foundation
